--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visual Word Representation</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Personalized Word Cloud</title>
+  <style>
+    body { font-family: Arial, sans-serif; text-align: center; }
+    #display { margin-top: 20px; }
+    .word { display: inline-block; margin: 5px; font-size: 20px; font-weight: bold; }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Word Visualizer</h1>
-        <input type="text" id="wordInput" placeholder="Enter a word">
-        <button onclick="addWord()">Add Word</button>
-        <div id="wordsContainer"></div>
-    </div>
-    <script src="script.js"></script>
+
+  <h1>Add Your Words to Your Personal Cloud</h1>
+  <input type="text" id="wordInput" placeholder="Enter a word">
+  <button onclick="addWord()">Add Word</button>
+
+  <div id="display"></div>
+
+  <script src="script.js"></script>
+
 </body>
 </html>
