--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Personalized Word Cloud</title>
+  <title>Who is God?</title>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; }
     #display { margin-top: 20px; }
@@ -12,9 +12,9 @@
 </head>
 <body>
 
-  <h1>Add Your Words to Your Personal Cloud</h1>
-  <input type="text" id="wordInput" placeholder="Enter a word">
-  <button onclick="addWord()">Add Word</button>
+  <h1>Who is God to you?</h1>
+  <input type="text" id="wordInput" placeholder="Enter your response:">
+  <button onclick="addWord()">Add response</button>
 
   <div id="display"></div>
 
