--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Who is God?</title>
   <style>
+    /* Background color for the whole page */
+    body {
+      background-color: #f0f8ff; /* Light blue color */
+      font-family: Arial, sans-serif;
+      text-align: center;
+    }
     body { font-family: Arial, sans-serif; text-align: center; }
     #display { margin-top: 20px; }
     .word { display: inline-block; margin: 5px; font-size: 20px; font-weight: bold; }
