--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Who is God?</title>
   <style>
     /* Background color for the whole page */
-    body { background-color: #f0f8ff, font-family: Arial, sans-serif; text-align: center; }
+    body { background-color: #46b9ff, font-family: Arial, sans-serif; text-align: center; }
     #display { margin-top: 20px; }
     .word { display: inline-block; margin: 5px; font-size: 20px; font-weight: bold; }
   </style>
