added style.css link and moved the display to the top

--- a/index.html
+++ b/index.html
@@ -4,20 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Who is God?</title>
-  <style>
-    /* Background color for the whole page */
-    body { background-color: #46b9ff, font-family: Arial, sans-serif; text-align: center; }
-    #display { margin-top: 20px; }
-    .word { display: inline-block; margin: 5px; font-size: 20px; font-weight: bold; }
-  </style>
-</head>
+  <link rel="stylesheet" href="style.css">
+  
 <body>
-
+  <div id="display"></div>
+  
   <h1>Who is God to you?</h1>
   <input type="text" id="wordInput" placeholder="Enter your response:">
   <button onclick="addWord()">Add response</button>
 
-  <div id="display"></div>
 
   <script src="script.js"></script>
 
