Update index.html ...

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
   
   <h1>Who is God to you?</h1>
-  <input type="text" id="wordInput" placeholder="Enter your response:">
+  <input type="text" id="wordInput" placeholder="Enter your response...">
   <button onclick="addWord()">Add response</button>
   <button onclick="clearAllWords()">Clear All</button> <!-- Clear All button -->
 
