--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <h1>Who is God to you?</h1>
   <input type="text" id="wordInput" placeholder="Enter your response...">
   <button onclick="addWord()">Add response</button>
-  <button onclick="clearAllWords()">Clear All</button> <!-- Clear All button -->
+  <button onclick="clearAllWords()">Clear My Response</button> <!-- Clear All button -->
 
   <script src="script.js"></script>
 
