Update index.html added image!

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <img src="images/Omnipresente.png" alt="Answers to question.">
   <div id="display"></div>
   
   <h1>Who is God to you?</h1>
