Update index.html full screen image stretch

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <img src="images/Omnipresente.png" alt="Answers to question.">
+  <img src="images/Omnipresente.png" alt="Answers to question." class="full-screen">
   <div id="display"></div>
   
   <h1>Who is God to you?</h1>
