--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- The background image -->
   <div class="background-image"></div>
-  <div id="display"></div>
   
-  <h1>Who is God to you?</h1>
-  <input type="text" id="wordInput" placeholder="Enter your response...">
-  <button onclick="addWord()">Add response</button>
-  <button onclick="clearAllWords()">Clear My Response</button> <!-- Clear All button -->
+  <!-- Main content -->
+  <div id="content">
+    <h1>Who is God to you?</h1>
+    <input type="text" id="wordInput" placeholder="Enter your response...">
+    <button onclick="addWord()">Add response</button>
+    <button onclick="clearAllWords()">Clear My Response</button> <!-- Clear All button -->
+    <div id="display"></div>
+  </div>
 
   <script src="script.js"></script>
-
 </body>
 </html>
