--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
   
   <!-- Main content -->
   <div id="content">
+    <img src="images/background_image.png" alt="Vis Representation of answers">
+    <div id="display"></div>
     <h1>Who is God to you?</h1>
     <input type="text" id="wordInput" placeholder="Enter your response...">
     <button onclick="addWord()">Add response</button>
     <button onclick="clearAllWords()">Clear My Response</button> <!-- Clear All button -->
-    <div id="display"></div>
   </div>
 
   <script src="script.js"></script>
