--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- The background image -->
-  <div class="background-image"></div>
+  <!-- <div class="background-image"></div> -->
   
   <!-- Main content -->
   <div id="content">
