--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <!-- Main content -->
   <div id="content">
-    <img src="images/image.png" alt="Vis Representation of answers" style="width: 200px; height: auto;">
+    <img src="images/image.png" alt="Vis Representation of answers" style="width: auto; height: auto;">
     <div id="display"></div>
     <h1>Who is God to you?</h1>
     <input type="text" id="wordInput" placeholder="Enter your response...">
