--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <!-- Main content -->
   <div id="content">
-    <img src="images/image.png" alt="Visual Representation of answers" class="responsive-image">
+    <img src="images/image.png" alt="Visual Representation of answers" class="stretch-image">
     <div id="display"></div>
     <h1>Who is God to you?</h1>
     <input type="text" id="wordInput" placeholder="Enter your response...">
