--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <input type="text" id="wordInput" placeholder="Enter your response...">
     <button onclick="addWord()">Add response</button>
     <button onclick="clearAllWords()">Clear My Response</button> <!-- Clear All button -->
+    <h3> This website is part of a project for BYU's Seeking the Sacred Study Abroad program. Here is the story behind it </h3>
+    <p> I embarked on a journey with 35 other students and 4 professors across the Globe. We began in Europe, ventured through Africa and the Near East, and finished in Asia. The purpose of such a trip was to study the various religions of the world.</p>
   </div>
 
   <script src="script.js"></script>
