--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img src="images/image.png" alt="Visual Representation of answers" class="conditional-image">
     <div id="display"></div>
     <h1>Who is God to you?</h1>
-    <input type="text" id="wordInput" placeholder="Enter your response...">
+    <input type="text" id="wordInput" placeholder="Enter your response..." onkeydown="checkEnter(event)">
     <button onclick="addWord()">Add response</button>
     <button onclick="clearAllWords()">Clear My Response</button> <!-- Clear All button -->
     <h3> This website is part of a project for BYU's Seeking the Sacred Study Abroad program. Here is the story behind it </h3>
