--- a/index.html
+++ b/index.html
@@ -18,9 +18,15 @@
     <button onclick="clearAllWords()">Clear My Response</button>
   </div>
 
+  <div class="scroll-down">
+    <p>Scroll down to discover more</p>
+    <span>&#x25BC;</span> <!-- Downward arrow -->
+  </div>
+
+  <div class="spacer"></div>
+
   <!-- Scroll-triggered content -->
   <div id="scroll-section" data-aos="fade-up">
-    <h1>Who Is God To You?</h1>
     <p>In <em>Fall 2024</em>, I set out on a journey across the globe, asking the same question to everyone I met:</p>
     <blockquote>“Who is God to you?”</blockquote>
     <p>The responses I received were as diverse as the people themselves—<em>ranging from Panamanian nature worshippers and Swiss atheists to Franciscan friars and Greek painters</em>. Yet, despite the differences, there was something deeply universal in their answers.</p>
