--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
     <button onclick="clearAllWords()">Clear My Response</button>
   </div>
 
+  <div class="spacer-two"></div>
+
   <div class="scroll-down">
     <p>Scroll down to discover more</p>
     <span>&#x25BC;</span> <!-- Downward arrow -->
   </div>
 
   <div class="spacer"></div>
-
+  
   <!-- Scroll-triggered content -->
   <div id="scroll-section" data-aos="fade-up">
     <p>In <em>Fall 2024</em>, I set out on a journey across the globe, asking the same question to everyone I met:</p>
