--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
   </div>
 
   <div class="spacer"></div>
+
+  <div data-aos="fade-up" style="height: 300px; background: lightblue;">
+    <p>This is a test element for AOS.</p>
+  </div>
+
   
   <!-- Scroll-triggered content -->
   <div id="scroll-section" data-aos="fade-up">
