--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <blockquote>“Who is God to you?”</blockquote>
     <p>The responses I received were as diverse as the people themselves—<em>ranging from Panamanian nature worshippers and Swiss atheists to Franciscan friars and Greek painters</em>. Yet, despite the differences, there was something deeply universal in their answers.</p>
     <p>Everywhere I went, I saw how humans are searching for a connection to the divine. This project is a visual representation of those responses and a reflection of my realization:</p>
-    <blockquote>The shared longing for the sacred reveals how much more alike we are than different.</blockquote>
+    <blockquote>The globally shared prevalence of divine connection reveals how much more alike we are than different.</blockquote>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
