--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
     <p>In <em>Fall 2024</em>, I set out on a journey across the globe, asking the same question to everyone I met:</p>
     <blockquote>“Who is God to you?”</blockquote>
     <p>The responses I received were as diverse as the people themselves—<em>ranging from Panamanian nature worshippers and Swiss atheists to Franciscan friars and Greek painters</em>. Yet, despite the differences, there was something deeply universal in their answers.</p>
-    <p>Everywhere I went, I saw how humans are searching for a connection to the divine. This project is a visual representation of those responses and a reflection of my realization:</p>
+    <p>Everywhere I went, I saw how humans are searching for a connection to the divine. This project is a visual representation of those responses, translated into their native languages, and a reflection of my new realization:</p>
     <blockquote>The globally shared prevalence of divine connection reveals how much more alike we are than different.</blockquote>
+    <p>Please add your response to the display above. After all, YOU are part of us. Your answer matters as much as anyones.</p>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
